2010-09-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-activate-group): Send the info to
	gnus-request-group.

	* nnimap.el (nnimap-request-group): Have the "check" version of the
	function parse flags and update the info, so that a `M-g' get a total
	resync of all flags from the group.

	* gnus-int.el (gnus-request-group): Take an optional `info' parameter
	to allow backends to alter the info on group selection.  Also alter all
	the backend -request-group functions to take the parameter.

	* nnimap.el (nnimap-store-info): New function.
	(nnimap-update-info): Store the info for later usage.
	(nnimap-request-group): Use the stored info for the dont-check case, so
	that we don't retrieve all marks when we enter a group.

	* nnimap.el: Use deffoo instead of defun for interface functions.

	* gnus-start.el (gnus-get-unread-articles): Allow the backends to
	update the group info.  This makes the nndraft groups, for instance, go
	back to their old behaviour.

	* gnus-sum.el (gnus-select-newsgroup): Indent.

	* nnimap.el (nnimap-possibly-change-group): Return nil if we can't log
	in.
	(nnimap-finish-retrieve-group-infos): Make sure we're not waiting for
	nothing.

	* gnus-start.el (gnus-get-unread-articles): Don't try to scan groups
	from methods that are denied.

	* gnus-int.el (gnus-method-denied-p): New function.

	* nnimap.el (nnimap-open-connection): Use auth-sources to query and
	store the password instead of netrc.
	(nnimap-open-connection): Don't error out when we can't make a
	connections.

	* auth-source.el (auth-source-create): In the password prompt, say what
	we're querying for.  Also prompt for user name if that hasn't been
	given.

	* nnimap.el (nnimap-with-process-buffer): Removed.

2010-09-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-read-active-for-groups): Don't use the "finish"
	method when we're reading from the agent.

	* nnagent.el (nnagent-retrieve-group-data-early): New dummy method.
